[FEATURE] : Navbar Component 90%

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "fix": "prettier --write . && eslint --fix --ext .jsx ."
   },
   "dependencies": {
+    "@tailwindui/react": "^0.1.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
@@ -28,7 +30,7 @@
     "husky": "^7.0.0",
     "postcss": "^8.4.12",
     "prettier": "^2.5.1",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "^3.0.24",
     "vite": "^2.8.0"
   }
 }
