--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.31.1",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
     "react-scroll": "^1.8.7"
   },
   "devDependencies": {
@@ -34,7 +34,7 @@
     "husky": "^7.0.0",
     "postcss": "^8.4.12",
     "prettier": "^2.5.1",
-    "tailwindcss": "^1.9.6",
+    "tailwindcss": "^3.0.24",
     "vite": "^2.8.0"
   }
 }
